clusters/infrastructure/prod/app/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    goldilocks.fairwinds.com/enabled: "true"
